--- a/wp-content/themes/seo-main/src/scss/components/_program-landing.scss
+++ b/wp-content/themes/seo-main/src/scss/components/_program-landing.scss
@@ -826,8 +826,7 @@ body {
   }
 
   .c-program-title,
-  .c-program-description,
-  .c-program-links {
+  .c-program-description {
     @include grid-column(12, $no-gutter);
 
     @include grid-media($md) {
